=========
Changelog
=========

1.6.0a3 (unreleased)
====================

- Fix: Grant database.* when using ``mysql.Grant``


1.6.0a2 (2017-07-04)
====================

- General update of batou's dependencies.

- Fix: Don't update ``git.Clone`` when there are incoming changes but the
  revision is fixed.


1.6.0a1 (2017-07-03)
====================

- Add a way to override DNS lookup during configuration, to better support
 migration scenarios.


1.5.0 (2017-06-23)
==================

- No changes to 1.5.0a6.


1.5.0a6 (2017-05-29)
====================

- Detect "no change" when using long revision ids in `mercurial.Clone()`.


1.5.0a5 (2017-05-21)
====================

- Fix `git.Clone()` verification of local state, so it only updates from remove
  if necessary. (#26117)


1.5.0a4 (2017-03-30)
====================

- Add `Component.log()` method to easily put out messages during configure/verify/update.


1.5.0a3 (2017-03-09)
====================

- Improve error reporting in multi host environments.


1.5.0a2 (2017-03-09)
====================

- Change `data-` attribute API to a simple dictionary. This is much more Python like.


1.5.0a1 (2017-03-07)
====================

- Add `data-` attributes to host sections.


1.4.0 (2017-03-06)
==================

- Minor readability improvement for the parallel connection code. changed yet.


1.4.0b7 (2016-12-14)
====================

- `batou.lib.mysql.User` and `batou.lib.mysql.Grant` use `hostname` for the
  MySQL *server* and `allow_from_hostname` for granting the client access from.


1.4.0b6 (2016-12-14)
====================

- Fix setting mysql password


1.4.0b5 (2016-12-14)
====================

- `batou.lib.mysql.User` wrongly overwrote the `host` attribute. The `host`
  attribute is reserved for host a component is configured on. Use
  `User(..., hostname=...)` instead.


1.4.0b4 (2016-12-14)
====================

- `batou.lib.mysql.Grant` wrongly overwrote the `host` attribute. The `host`